# elevation_mapping_ros2

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt  zed_mini.md
config/: elevation_map.param.yaml  robot.param.yaml
elevation_mapping_ros2/: CMakeLists.txt  Readme.md  package.xml  rules.md
elevation_mapping_ros2/config/: elevation_map.param.yaml  elevation_mapping.param.yaml  post_processing.param.yaml  topic_name.yaml  visualization.yaml
elevation_mapping_ros2/include/elevation_mapping_ros2/: ElevationMap.hpp  ElevationMapping.hpp  TypeDef.hpp  ros_parameters.hpp
elevation_mapping_ros2/include/elevation_mapping_ros2/post_processing/: PostProcessor.hpp
elevation_mapping_ros2/include/elevation_mapping_ros2/sesnor_processing/: LaserSensorProcessor.hpp  PerfectSensorProcessor.hpp  SensorProcessorBase.hpp  StereoSensorProcessor.hpp
elevation_mapping_ros2/launch/: elevation_mapping.launch.py  elevation_mapping_divide_executor.launch.py  load_elevation_mapping.launch.py  load_post_processing.launch.py
elevation_mapping_ros2/src/: ElevationMap.cpp  ElevationMapping.cpp  RobotMotionUpdater.cpp
elevation_mapping_ros2/src/node/: post_processing_node.cpp
elevation_mapping_ros2/src/post_processing/: PostProcessor.cpp
elevation_mapping_ros2/src/sensor_processing/: LaserSensorProcessor.cpp  PerfectSensorProcessor.cpp  SensorProcessorBase.cpp  StereoSensorProcessor.cpp
elevation_mapping_ros2_demo/: package.xml  setup.cfg  setup.py
elevation_mapping_ros2_demo/elevation_mapping_ros2_demo/: pcd_publisher_node.py  tf_publisher_node.py
elevation_mapping_ros2_demo/elevation_mapping_ros2_demo/tf_publisher/: tf_publisher_node.py
elevation_mapping_ros2_demo/launch/: pcd_publisher.launch.py
elevation_mapping_ros2_demo/rviz2/: rviz2.rviz
grid_map_test/: CMakeLists.txt  package.xml
grid_map_test/src/: index2position_test.cpp
include/elevation_mapping_ros2/: ElevationMap.hpp  ElevationMapping.hpp  RobotMotionUpdater.hpp
include/elevation_mapping_ros2/sesnor_processing/: PerfectSensorProcessor.hpp  SensorProcessorBase.hpp
launch/: elevation_mapping.launch.py
plane_extraction/: CMakeLists.txt  package.xml
plane_extraction/include/plane_extraction/: PlaneExtractor.h
plane_extraction/launch/: plane_extractor.launch.py
plane_extraction/src/: PlaneExtractor.cpp
src/: ElevationMap.cpp  ElevationMapping.cpp  RobotMotionUpdater.cpp  elevation_mapping_node.cpp
src/sensor_processing/: PerfectSensorProcessor.cpp  SensorProcessorBase.cpp
test/: test_sensor_processor.cpp
